crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_match_labeled_node.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) RETURN n\")"
---
MATCH (n:Person)
RETURN n
