crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_match_labeled_rel.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n)-[r:KNOWS]->(m) RETURN n\")"
---
MATCH (n)-[r:KNOWS]->(m)
RETURN n
