crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_match_property_map.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n {name: 'Alice'}) RETURN n\")"
---
MATCH (n {name: 'Alice'})
RETURN n
