crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_match_relationship.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n)-[r]->(m) RETURN n, r, m\")"
---
MATCH (n)-[r]->(m)
RETURN n, r, m
