crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_match_return_uppercase.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"match (n) return n\")"
---
MATCH (n)
RETURN n
