crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_multiple_statements_trailing_semi.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n; MATCH (m) RETURN m;\")"
---
MATCH (n)
RETURN n;
MATCH (m)
RETURN m;
