crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_order_by.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n ORDER BY n.name ASC\")"
---
MATCH (n)
RETURN n
ORDER BY n.name ASC
